made some fixing

--- a/Blog Page/Blog Page.html
+++ b/Blog Page/Blog Page.html
@@ -78,31 +78,53 @@
 							<div class="c-blog__body">
 								<div class="c-blog__content">
 									<p>
-										Lorem ipsum dolor sit amet, consectetur
-										adipisicing elit. Voluptate quas, nobis excepturi
-										ad adipisci neque inventore debitis placeat
-										impedit corrupti ea doloribus facilis odit unde
-										distinctio molestias, laboriosam itaque sunt.
-										Explicabo porro fuga, fugit eligendi possimus,
-										expedita doloremque quod perspiciatis quos totam
-										id laboriosam. Repellat possimus qui ad! Sunt ea
-										id reiciendis. Delectus doloribus incidunt earum
-										quo, modi dolores iste. Aut, veritatis dolorem,
-										saepe voluptates accusantium repellat molestiae
-										numquam, minus sequi illo omnis minima ea odit ab
-										maxime ipsa eos. Nostrum accusantium deleniti,
-										deserunt nam similique animi reiciendis assumenda
-										itaque! Rerum, ducimus asperiores beatae
-										praesentium nihil, corporis voluptates delectus
-										nobis laudantium commodi voluptatum qui enim,
-										reiciendis ipsum voluptas? Numquam dolore magnam
-										praesentium accusantium libero dolores molestiae
-										at hic adipisci illo. Voluptatum accusantium
-										commodi, cumque hic aperiam in fugiat sapiente,
-										corporis iusto totam error ullam at distinctio
-										obcaecati? Ad praesentium asperiores fugit quas
-										delectus id dolore nihil a, debitis voluptatem
-										quam.
+										Lorem ipsum dolor sit amet consectetur,
+										adipisicing elit. Non corporis id nesciunt amet
+										molestias quos, doloremque animi eaque asperiores
+										harum dicta ex autem laudantium, quis cupiditate
+										soluta? Voluptate, nostrum tempora. Optio natus
+										rem, nobis sunt, dolor reprehenderit, commodi
+										recusandae doloremque maxime hic aspernatur! Quos
+										quas voluptatem odio fugiat. Accusamus totam,
+										mollitia harum ad omnis maiores expedita pariatur
+										perspiciatis cumque nisi! Veniam, iure eligendi
+										natus beatae vitae molestias libero ad odio sequi
+										nobis quidem tenetur eos, sint quam in saepe
+										corporis, sit consequuntur placeat. Velit nihil
+										sunt possimus temporibus quam non! Quam, assumenda
+										omnis corporis soluta, neque at animi laborum
+										porro aliquid fugit quidem vel nisi sed. Vitae
+										ducimus doloremque quidem magnam eligendi earum
+										beatae illum, natus omnis sequi maxime
+										repudiandae! Culpa dolor qui repellendus cum
+										voluptatum voluptas. Amet repudiandae inventore et
+										eius repellat nobis obcaecati non, minima id quam
+										beatae ullam omnis laudantium eum blanditiis, eos
+										animi, laborum modi magnam! Consequatur cum quae
+										similique nostrum, debitis cupiditate sunt minima
+										nesciunt reprehenderit corrupti incidunt quas
+										doloremque, totam ut perspiciatis. Dolorem
+										incidunt sapiente a error dolor deserunt? Illum
+										obcaecati laborum totam aliquam? Nobis veritatis
+										architecto optio, dicta recusandae amet quas,
+										provident minima dolores omnis quod distinctio
+										odit quasi. Aliquam odio accusantium porro harum
+										ullam? Ad, commodi officia impedit aperiam optio
+										ratione magnam? Maiores magnam vero rem vel
+										aliquam velit et obcaecati aut impedit. Sunt magni
+										esse architecto velit? Sint at quisquam ducimus,
+										enim quos molestiae. Tempore beatae numquam
+										placeat magnam quos tenetur. Excepturi aperiam
+										molestiae fugiat? Exercitationem quis recusandae
+										numquam perspiciatis cupiditate veniam inventore?
+										Eveniet vitae consequatur ducimus, earum aperiam
+										consectetur, dolor odio sint, ut molestias ea
+										deserunt tempore? Quibusdam, placeat et. Sit rem
+										pariatur facere velit atque enim, asperiores ex,
+										odio deleniti assumenda architecto, quaerat
+										eveniet accusantium officiis est non aut
+										recusandae fugit culpa nisi aspernatur nulla
+										praesentium? Itaque, assumenda ullam!
 									</p>
 								</div>
 
