--- a/Create Blog/Create Blog.html
+++ b/Create Blog/Create Blog.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../Header/Header.css" />
 		<link rel="stylesheet" href="../Navigiation/Navigation.css" />
 		<link rel="stylesheet" href="../Footer/Footer.css" />
-		<link rel="stylesheet" href="Login.css" />
+		<link rel="stylesheet" href="Create Blog.css" />
 	</head>
 
 	<body>
@@ -60,45 +60,44 @@
 			<main class="o-main-area">
 				<section class="o-section-container">
 					<div class="o-page-heading">
-						<h1 class="c-page-heading">User Log In</h1>
+						<h1 class="c-page-heading">User Sign Up</h1>
 					</div>
 
 					<div class="o-page-body">
-						<div class="c-form">
-							<form action="" class="c-form__body">
-								<div class="c-form-input">
-									<label class="c-form-input__label" for="username"
-										>Username</label
+						<div class="c-form-blog">
+							<form action="" class="c-form-blog__body">
+								<div class="c-form-blog-input">
+									<label class="c-form-blog-input__label" for="title"
+										>Title</label
 									>
 									<input
-										class="c-form-input__data"
+										class="c-form-blog-input__title"
 										type="text"
-										id="username"
-										name="username"
+										id="title"
+										name="title"
 										required
 									/>
 								</div>
 
-								<div class="c-form-input">
-									<label class="c-form-input__label" for="password"
-										>Password</label
+								<div class="c-form-blog-input">
+									<label
+										class="c-form-blog-input__label"
+										for="username"
+										>Content</label
 									>
-									<input
-										class="c-form-input__data"
-										type="password"
-										id="password"
-										name="password"
-										required
-									/>
+									<textarea
+										class="c-form-blog-input__content"
+										name="content"
+										id=""
+										rows="3"
+									></textarea>
 								</div>
-
-								<div class="c-form-button">
+								<div class="c-comments-form__button">
 									<button
-										class="c-form-button__submit"
 										type="submit"
-										class="button"
+										class="c-comments-form__button-submit"
 									>
-										Log In
+										Save
 									</button>
 								</div>
 							</form>
