--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -74,6 +74,7 @@
 										class="c-form-input__data"
 										type="text"
 										id="username"
+										name="username"
 										required
 									/>
 								</div>
@@ -85,6 +86,7 @@
 										class="c-form-input__data"
 										type="email"
 										id="email"
+										name="email"
 										required
 									/>
 								</div>
@@ -96,6 +98,7 @@
 										class="c-form-input__data"
 										type="password"
 										id="password"
+										name="password"
 										required
 									/>
 								</div>
@@ -108,6 +111,7 @@
 										class="c-form-input__data"
 										type="text"
 										id="first-name"
+										name="first-name"
 										required
 									/>
 								</div>
@@ -119,6 +123,7 @@
 										class="c-form-input__data"
 										type="text"
 										id="middle-name"
+										name="middle-name"
 										required
 									/>
 								</div>
@@ -130,6 +135,7 @@
 										class="c-form-input__data"
 										type="text"
 										id="last-name"
+										name="last-name"
 										required
 									/>
 								</div>
