completed the create blog page

--- a/Create Blog/Create Blog.html
+++ b/Create Blog/Create Blog.html
@@ -60,7 +60,7 @@
 			<main class="o-main-area">
 				<section class="o-section-container">
 					<div class="o-page-heading">
-						<h1 class="c-page-heading">User Sign Up</h1>
+						<h1 class="c-page-heading">Create Blog</h1>
 					</div>
 
 					<div class="o-page-body">
@@ -80,22 +80,20 @@
 								</div>
 
 								<div class="c-form-blog-input">
-									<label
-										class="c-form-blog-input__label"
-										for="username"
+									<label class="c-form-blog-input__label" for="content"
 										>Content</label
 									>
 									<textarea
 										class="c-form-blog-input__content"
 										name="content"
-										id=""
-										rows="3"
+										id="content"
+										rows="13"
 									></textarea>
 								</div>
-								<div class="c-comments-form__button">
+								<div class="c-form-blog__button">
 									<button
 										type="submit"
-										class="c-comments-form__button-submit"
+										class="c-form-blog__button-save"
 									>
 										Save
 									</button>
