--- a/Navigiation/Navigation.html
+++ b/Navigiation/Navigation.html
@@ -6,78 +6,56 @@
 		<title>Component Developemnt for Blog Project</title>
 		<link rel="stylesheet" href="../index.css" />
 		<link rel="stylesheet" href="../Header/Header.css" />
-		<link rel="stylesheet" href="Navigation.css" />
+		<link rel="stylesheet" href="../Navigiation/Navigation.css" />
+		<link rel="stylesheet" href="../Footer/Footer.css" />
+		<link rel="stylesheet" href="Create Blog.css" />
 	</head>
 
 	<body>
 		<div id="root">
-			<header class="header">
-				<nav class="main-navigation">
-					<ul class="nav-links">
-						<li class="nav-link">
-							<a href="../index.html" class="nav-link-item active"
-								>Link</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Blog List/Blog List.html" class="nav-link-item"
-								>Blog List</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Blog/Blog.html" class="nav-link-item">Blog</a>
-						</li>
-						<li class="nav-link">
-							<a href="../Sidebar/Sidebar.html" class="nav-link-item"
-								>Sidebar</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Signup/Signup.html" class="nav-link-item"
-								>Sign Up</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Login/Login.html" class="nav-link-item"
-								>Log In</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Logo/Logo.html" class="nav-link-item">Logo</a>
-						</li>
-						<li class="nav-link">
-							<a
-								href="../Navigiation/Navigation.html"
-								class="nav-link-item"
-								>Navigation</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Header/Header.html" class="nav-link-item"
-								>Header</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Footer/Footer.html" class="nav-link-item"
-								>Footer</a
-							>
-						</li>
-						<li class="nav-link">
-							<a
-								href="../User Profile/User Profile.html"
-								class="nav-link-item"
-								>User Profile</a
-							>
-						</li>
-
-						<li class="nav-link">
-							<a href="../User List/User List.html" class="nav-link-item"
-								>User List</a
-							>
-						</li>
-					</ul>
+			<header class="o-header">
+				<nav class="c-navigation">
+					<div class="c-main-navigation">
+						<ul class="c-main-navigation__items">
+							<li class="c-main-navigation__item">
+								<a href="../index.html" class="c-main-navigation__link"
+									>Blogs</a
+								>
+							</li>
+							<li class="c-main-navigation__">
+								<a href="../index.html" class="c-main-navigation__link"
+									>Users</a
+								>
+							</li>
+						</ul>
+					</div>
+					<div class="c-user-navigation">
+						<ul class="c-user-navigation__items">
+							<li class="c-user-navigation__item">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Signup</a
+								>
+							</li>
+							<li class="c-user-navigation__item">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Login</a
+								>
+							</li>
+							<li class="c-user-navigation__">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Logout</a
+								>
+							</li>
+						</ul>
+					</div>
 				</nav>
 			</header>
+			<main class="o-main-area">
+				<section class="o-section-container"></section>
+			</main>
+			<footer class="footer">
+				<p>Welcome to the Blog</p>
+			</footer>
 		</div>
 	</body>
 </html>
