--- a/Navigiation/Navigation.html
+++ b/Navigiation/Navigation.html
@@ -41,7 +41,7 @@
 									>Login</a
 								>
 							</li>
-							<li class="c-user-navigation__">
+							<li class="c-user-navigation__item">
 								<a href="../index.html" class="c-user-navigation__link"
 									>Logout</a
 								>
