--- a/Create Blog/Create Blog.html
+++ b/Create Blog/Create Blog.html
@@ -13,48 +13,41 @@
 
 	<body>
 		<div id="root">
-			<header class="header">
-				<nav class="main-navigation">
-					<ul class="nav-links">
-						<li class="nav-link">
-							<a href="../index.html" class="nav-link-item">Link</a>
-						</li>
-						<li class="nav-link">
-							<a href="../Blog List/Blog List.html" class="nav-link-item"
-								>Blog List</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Blog/Blog.html" class="nav-link-item">Blog</a>
-						</li>
-
-						<li class="nav-link">
-							<a href="../Signup/Signup.html" class="nav-link-item"
-								>Sign Up</a
-							>
-						</li>
-						<li class="nav-link">
-							<a href="../Login/Login.html" class="nav-link-item"
-								>Log In</a
-							>
-						</li>
-
-						<li class="nav-link">
-							<a
-								href="../User Blog List/User Blog List.html"
-								class="nav-link-item"
-								>User Blogs</a
-							>
-						</li>
-
-						<li class="nav-link">
-							<a
-								href="../User Profile/User Profile.html"
-								class="nav-link-item"
-								>User Profile</a
-							>
-						</li>
-					</ul>
+			<header class="o-header">
+				<nav class="c-navigation">
+					<div class="c-main-navigation">
+						<ul class="c-main-navigation__items">
+							<li class="c-main-navigation__item">
+								<a href="../index.html" class="c-main-navigation__link"
+									>Blogs</a
+								>
+							</li>
+							<li class="c-main-navigation__">
+								<a href="../index.html" class="c-main-navigation__link"
+									>Users</a
+								>
+							</li>
+						</ul>
+					</div>
+					<div class="c-user-navigation">
+						<ul class="c-user-navigation__items">
+							<li class="c-user-navigation__item">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Signup</a
+								>
+							</li>
+							<li class="c-user-navigation__item">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Login</a
+								>
+							</li>
+							<li class="c-user-navigation__item">
+								<a href="../index.html" class="c-user-navigation__link"
+									>Logout</a
+								>
+							</li>
+						</ul>
+					</div>
 				</nav>
 			</header>
 			<main class="o-main-area">
