changed the links for the nav

--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -19,12 +19,16 @@
 					<div class="c-main-navigation">
 						<ul class="c-main-navigation__items">
 							<li class="c-main-navigation__item">
-								<a href="../index.html" class="c-main-navigation__link"
+								<a
+									href="../Blogs/Blogs.html"
+									class="c-main-navigation__link"
 									>Blogs</a
 								>
 							</li>
 							<li class="c-main-navigation__">
-								<a href="../index.html" class="c-main-navigation__link"
+								<a
+									href="../User List/User List.html"
+									class="c-main-navigation__link"
 									>Users</a
 								>
 							</li>
@@ -33,17 +37,23 @@
 					<div class="c-user-navigation">
 						<ul class="c-user-navigation__items">
 							<li class="c-user-navigation__item">
-								<a href="../index.html" class="c-user-navigation__link"
+								<a
+									href="../Signup/Signup.html"
+									class="c-user-navigation__link"
 									>Signup</a
 								>
 							</li>
 							<li class="c-user-navigation__item">
-								<a href="../index.html" class="c-user-navigation__link"
+								<a
+									href="../Login/Login.html"
+									class="c-user-navigation__link"
 									>Login</a
 								>
 							</li>
 							<li class="c-user-navigation__item">
-								<a href="../index.html" class="c-user-navigation__link"
+								<a
+									href="../Blogs/Blogs.html"
+									class="c-user-navigation__link"
 									>Logout</a
 								>
 							</li>
