updated the forms

--- a/Login/Login.html
+++ b/Login/Login.html
@@ -71,7 +71,7 @@
 							<form action="" class="c-form__body">
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="username"
-										>Username</label
+										>Username:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -84,7 +84,7 @@
 
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="password"
-										>Password</label
+										>Password:</label
 									>
 									<input
 										class="c-form-input__data"
