--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -71,7 +71,7 @@
 							<form action="" class="c-form__body">
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="username"
-										>Username</label
+										>Username:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -83,7 +83,7 @@
 								</div>
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="email"
-										>Email</label
+										>Email:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -95,7 +95,7 @@
 								</div>
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="password"
-										>Password</label
+										>Password:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -108,7 +108,7 @@
 
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="first-name"
-										>First Name</label
+										>First Name:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -120,7 +120,7 @@
 								</div>
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="middle-name"
-										>Middle Name</label
+										>Middle Name:</label
 									>
 									<input
 										class="c-form-input__data"
@@ -132,7 +132,7 @@
 								</div>
 								<div class="c-form-input">
 									<label class="c-form-input__label" for="last-name"
-										>Last Name</label
+										>Last Name:</label
 									>
 									<input
 										class="c-form-input__data"
