updated user list style and template

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -67,19 +67,19 @@
 					</div>
 
 					<div class="o-page-body">
-						<ul class="o-user-list">
+						<!-- <ul class="o-user-list">
 							<li class="o-user-list__item">
 								<div class="c-user">
 									<div class="c-user__avatar"></div>
 
 									<div class="c-user__info">
 										<h1 class="c-user__fullname">Daisy Johnson</h1>
-										<!-- <ul class="c-user__detail-list">
+										<ul class="c-user__detail-list">
 										<li class="c-user__detail-list-item">1 Blog</li>
 										<li class="c-user__detail-list-item">
 											2 Friends
 										</li>
-									</ul> -->
+									</ul>
 									</div>
 								</div>
 							</li>
@@ -87,6 +87,23 @@
 							<li class="o-user-list__item">
 								<div class="c-user">
 									<div class="c-user__avatar"></div>
+
+									<div class="c-user__info">
+										<h1 class="c-user__fullname">Daisy Johnson</h1>
+									</div>
+								</div>
+							</li>
+						</ul> -->
+
+						<ul class="o-user-list">
+							<li class="o-user-list__item">
+								<div class="c-user">
+									<div class="c-user__avatar">
+										<img
+											class="c-user__avatar-pic"
+											src="../Images/ChloeAvatar.jpg"
+										/>
+									</div>
 
 									<div class="c-user__info">
 										<h1 class="c-user__fullname">Daisy Johnson</h1>
