--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -15,19 +15,19 @@
 		<div id="root">
 			<header class="o-header">
 				<nav class="c-navigation">
-					<div class="c-main-navigation">
-						<ul class="c-main-navigation__items">
-							<li class="c-main-navigation__item">
+					<div class="c-default-navigation">
+						<ul class="c-default-navigation__items">
+							<li class="c-default-navigation__item">
 								<a
 									href="../Blogs/Blogs.html"
-									class="c-main-navigation__link"
+									class="c-default-navigation__link"
 									>Blogs</a
 								>
 							</li>
-							<li class="c-main-navigation__">
+							<li class="c-default-navigation__">
 								<a
 									href="../User List/User List.html"
-									class="c-main-navigation__link"
+									class="c-default-navigation__link"
 									>Users</a
 								>
 							</li>
