--- a/Login/Login.html
+++ b/Login/Login.html
@@ -96,11 +96,7 @@
 								</div>
 
 								<div class="c-form-button">
-									<button
-										class="c-form-button__submit"
-										type="submit"
-										class="button"
-									>
+									<button class="c-form-button__submit" type="submit">
 										Log In
 									</button>
 								</div>
