--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -221,11 +221,7 @@
 								</a>
 							</div>
 							<div class="c-form-button">
-								<button
-									class="c-form-button__createnew"
-									type="submit"
-									class="button"
-								>
+								<button class="c-form-button__createnew" type="submit">
 									Create New
 								</button>
 							</div>
