added some form styling

--- a/Login/Login.html
+++ b/Login/Login.html
@@ -87,7 +87,7 @@
 										>Password:</label
 									>
 									<input
-										class="c-form-input__data"
+										class="c-form-input__data--invalid"
 										type="password"
 										id="password"
 										name="password"
